<resources>
    <string name="app_name">Tailor Management System</string>
    <string name="AddNewOrderButtonText">Add New Order</string>
    <string name="AllCustomersButtonText">Customer Management</string>
    <string name="OrderManagementButtonText">Order Management</string>
    <string name="PaymentSummaryButtonText">Payment Summary</string>
    <string name="AboutUsButtonText">About Us</string>
    <string name="ItemManagementButtonText">Item Management</string>
    <string name="CustomerRegButtonText">Customer Registration</string>
    <string name="CustomerRegistrationTitle">Customer Registration</string>
    <string name="PhoneNumberHint">Phone Number (e.g. 03461232122)</string>
    <string name="Address">Address</string>
    <string name="AddressHint">Address</string>
    <string name="NameHint">Name</string>
    <string name="RegisterButton">Register</string>
    <string name="Measurements">Measurements (Inch)</string>
    <string name="Pending">Pending</string>
    <string name="Completed">Completed</string>
    <string name="Delivered">Delivered</string>
    <string name="Daily">Daily</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
    <string name="PaymentDate">Payment Date</string>
    <string name="Amount">Amount</string>
    <string name="OrderId">Order Id</string>
    <string name="No">No.</string>
    <string name="Name">Name</string>
    <string name="DeliveryDate">Delivery Date:</string>
    <string name="CustomerId">Customer No</string>
    <string name="OrderDate">Order Date:</string>
    <string name="PhoneNo">Phone No: </string>
    <string name="Quantity">Total Pieces:</string>
    <string name="AdvancePayment">Advance Payment</string>
    <string name="TotalAmount">Total Bill:</string>
    <string name="RemainingAmount">Remaining Payment</string>
    <string name="Status">Status</string>
    <string name="Update">Update</string>
    <string name="Empty"></string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="EmailHint">Email</string>
    <string name="Submit">Submit</string>
    <string name="CurrentDate">Current Date</string>
    <string-array name="spinner_values_real">
        <item>0</item>
        <item>1/2</item>
        <item>1/4</item>
        <item>3/4</item>
    </string-array>
    <string-array name="spinner_values_integer">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="status">
        <item>Pending</item>
        <item>Completed</item>
        <item>Delivered</item>
    </string-array>
</resources>