<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentSummaryAct">

    <Button
        android:id="@+id/payment_summary_daily_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/Daily"
        android:onClick="DisplayDailyPayments"
        app:layout_constraintEnd_toStartOf="@+id/payment_summary_monthly_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/payment_summary_monthly_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:text="@string/Monthly"
        android:onClick="DisplayMonthlyPayments"
        app:layout_constraintEnd_toStartOf="@+id/payment_summary_yearly_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/payment_summary_daily_button"
        app:layout_constraintTop_toTopOf="@+id/payment_summary_daily_button" />

    <Button
        android:id="@+id/payment_summary_yearly_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="DisplayYearlyPayments"
        android:text="@string/Yearly"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/payment_summary_monthly_button"
        app:layout_constraintTop_toTopOf="@+id/payment_summary_monthly_button" />

    <TextView
        android:id="@+id/paymentSummaryTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/No"
        app:layout_constraintEnd_toStartOf="@+id/paymentSummaryTextView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_summary_daily_button" />

    <TextView
        android:id="@+id/paymentSummaryTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintEnd_toStartOf="@+id/paymentSummaryTextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/paymentSummaryTextView1"
        app:layout_constraintTop_toTopOf="@+id/paymentSummaryTextView1" />

    <TextView
        android:id="@+id/paymentSummaryTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PaymentDate"
        app:layout_constraintEnd_toStartOf="@+id/paymentSummaryTextView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/paymentSummaryTextView2"
        app:layout_constraintTop_toTopOf="@+id/paymentSummaryTextView2" />

    <TextView
        android:id="@+id/paymentSummaryTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/paymentSummaryTextView3"
        app:layout_constraintTop_toTopOf="@+id/paymentSummaryTextView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paymentSummaryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/paymentSummaryTextView1"
        tools:layout_editor_absoluteX="-14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>