<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewOrderDetailsAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        !-- Line 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrderDate" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextOrderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/Empty"
                android:textAlignment="center" />

        </LinearLayout>

        !-- Line 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DeliveryDate" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/Empty"
                android:textAlignment="center" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Date"
                android:onClick="showDatePickerDialog"
                />

        </LinearLayout>


        <!-- Line 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Selected Items Details"/>

            <LinearLayout
                android:id="@+id/newOrderDetailsLinearLayoutItemsDetail"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="Select Item: "/>

                <Spinner
                    android:id="@+id/newOrderDetailsSpinnerItems"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:onClick="AddNewItem"
                    android:layout_height="wrap_content"
                    android:text="Add Item"/>

            </LinearLayout>
        </LinearLayout>


        !-- Line 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quantity" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="0"
                android:textAlignment="center" />

        </LinearLayout>

        !-- Line 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalAmount" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextTotalBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="0"
                android:textAlignment="center" />

        </LinearLayout>

        !-- Line 6 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AdvancePayment" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextAdvancePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center" />

        </LinearLayout>


        !-- Line 7 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemainingAmount" />

            <EditText
                android:id="@+id/newOrderDetailsEditTextRemainingAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="0"
                android:textAlignment="center" />

        </LinearLayout>


        <!-- Status Line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/Status"
                android:textAlignment="center"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/newOrderDetailsSpinnerStatus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/Empty" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:onClick="CreateOrder"
            android:layout_height="wrap_content"
            android:text="@string/Submit"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>