<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewOrderAct">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:iconifiedByDefault="false"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <requestFocus />

    </SearchView>


    <TextView
        android:id="@+id/newOrderTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/No"
        app:layout_constraintEnd_toStartOf="@+id/newOrdertextView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <TextView
        android:id="@+id/newOrdertextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintEnd_toStartOf="@+id/newOrdertextView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newOrderTextView1"
        app:layout_constraintTop_toTopOf="@+id/newOrderTextView1" />

    <TextView
        android:id="@+id/newOrdertextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newOrdertextView2"
        app:layout_constraintTop_toTopOf="@+id/newOrdertextView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newOrderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/newOrderTextView1"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>